[package]
name = "test-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand="0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }